# Nubicustos

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  INSTALL.md  LICENSE  NOTICE  README.md  STRUCTURE.md  docker-compose.yml  init.sql  nginx.conf  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
api/: Dockerfile  config.py  logging_config.py  main.py  permission_requirements.py  pyproject.toml  requirements-dev.txt  requirements-security.txt  requirements.txt
cloudmapper/: Dockerfile  entrypoint.sh
db-migrations/: 001_phase1_features.sql  add_missing_findings_columns.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MCP-EXAMPLES.md  PERFORMANCE.md  PHASE1_FEATURES.md  SECURITY_MODEL.md  TROUBLESHOOTING.md
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
nubicustos-mcp/: .env.example  README.md  pyproject.toml
nubicustos-mcp/src/nubicustos_mcp/: __init__.py  client.py  config.py  server.py
nubicustos-mcp/src/nubicustos_mcp/prompts/: __init__.py  analysis_prompts.py  ops_prompts.py  scan_prompts.py
nubicustos-mcp/src/nubicustos_mcp/resources/: __init__.py  data.py
nubicustos-mcp/src/nubicustos_mcp/tools/: __init__.py  attack_paths.py  cloud.py  exports.py  findings.py  scans.py  security.py  system.py
profiles/: compliance-only.yml  comprehensive.yml  quick.yml
report-processor/: Dockerfile  analyze_report.py  assumed_role_analyzer.py  attack_path_analyzer.py  (+13 more)
(+272 files in other folders)
